<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahResep"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/inputImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/soto"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/judul"
                android:layout_width="360dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="24dp"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                />

            <EditText
                android:id="@+id/textjudul"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="24dp"
                android:hint="@string/textjudul"
                android:background="@drawable/garis"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/deskripsi"
                android:layout_width="360dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="24dp"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                />

            <EditText
                android:id="@+id/textdeskripsi"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="24dp"
                android:hint="@string/textdeskripsi"
                android:background="@drawable/garis"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/waktu"
                android:layout_width="360dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="24dp"
                android:layout_height="wrap_content"
                android:text="@string/waktu"
                />

            <EditText
                android:id="@+id/textwaktu"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="24dp"
                android:hint="@string/textwaktu"
                android:background="@drawable/garis"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/bahan"
                android:layout_width="360dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="24dp"
                android:layout_height="wrap_content"
                android:text="@string/bahan"
                />

            <EditText
                android:id="@+id/textbahan"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:hint="@string/textbahan"
                android:minLines="7"
                android:gravity="top"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/garis"
                android:padding="8dp"
                />

            <TextView
                android:id="@+id/langkah"
                android:layout_width="360dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="24dp"
                android:layout_height="wrap_content"
                android:text="@string/langkah"
                />

            <EditText
                android:id="@+id/textlangkah"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:hint="@string/textlangkah"
                android:minLines="7"
                android:gravity="top"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="24dp"
                android:background="@drawable/garis"
                android:padding="8dp"
                />

            <Button
                android:id="@+id/btn_posting"
                android:layout_margin="24dp"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_posting"
                android:backgroundTint="@color/black"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>