<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".ResepMasakan">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/inputImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/soto"
                />

            <View
                android:layout_width="350dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="-40dp"
                android:background="@drawable/garis"
                />

            <TextView
                android:id="@+id/textjudul"
                android:layout_width="300dp"
                android:layout_gravity="center"
                android:text="@string/textjudul"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="-65dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="300dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="95dp"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/profpict"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/account"
                android:layout_marginTop="-25dp"
                android:layout_marginStart="55dp"
                />

            <ImageView
                android:id="@+id/bookmark"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_bookmark_border_24"
                android:layout_marginStart="320dp"
                android:layout_marginTop="-55dp"
                />

            <TextView
                android:id="@+id/textstar"
                android:layout_width="300dp"
                android:text="@string/_1"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginTop="-20dp"
                android:layout_marginStart="250dp"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/star"
                android:layout_marginTop="-21dp"
                android:layout_marginStart="225dp"
                />

            <View
                android:layout_width="350dp"
                android:layout_height="880dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/garis"
                />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="-870dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textdeskripsi"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textwaktu"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bahan"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textisibahan"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/langkah"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textlangkah"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>